rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__folder-with-cframe-attributes__encoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: text_roundtrip
---
num_types: 1
num_instances: 1
chunks:
  - Inst:
      type_id: 0
      type_name: Folder
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - 19 00 00 00 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 32 14 00 00 00 00 00 00 00 00 00 00 00 00 02 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 33 14 00 00 00 00 00 00 00 00 00 00 00 00 03 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 35 14 00 00 00 00 00 00 00 00 00 00 00 00 05 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 36 14 00 00 00 00 00 00 00 00 00 00 00 00 06 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 37 14 00 00 00 00 00 00 00 00 00 00 00 00 07 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 39 14 00 00 00 00 00 00 00 00 00 00 00 00 09 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 61 14 00 00 00 00 00 00 00 00 00 00 00 00 0a 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 63 14 00 00 00 00 00 00 00 00 00 00 00 00 0c 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 64 14 00 00 00 00 00 00 00 00 00 00 00 00 0d 0a 00 00 00 52 6f 74 61 74 69 6f 6e 30 65 14 00 00 00 00 00 00 00 00 00 00 00 00 0e 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 30 14 00 00 00 00 00 00 00 00 00 00 00 00 10 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 31 14 00 00 00 00 00 00 00 00 00 00 00 00 11 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 34 14 00 00 00 00 00 00 00 00 00 00 00 00 14 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 35 14 00 00 00 00 00 00 00 00 00 00 00 00 15 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 37 14 00 00 00 00 00 00 00 00 00 00 00 00 17 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 38 14 00 00 00 00 00 00 00 00 00 00 00 00 18 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 39 14 00 00 00 00 00 00 00 00 00 00 00 00 19 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 62 14 00 00 00 00 00 00 00 00 00 00 00 00 1b 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 63 14 00 00 00 00 00 00 00 00 00 00 00 00 1c 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 65 14 00 00 00 00 00 00 00 00 00 00 00 00 1e 0a 00 00 00 52 6f 74 61 74 69 6f 6e 31 66 14 00 00 00 00 00 00 00 00 00 00 00 00 1f 0a 00 00 00 52 6f 74 61 74 69 6f 6e 32 30 14 00 00 00 00 00 00 00 00 00 00 00 00 20 0a 00 00 00 52 6f 74 61 74 69 6f 6e 32 32 14 00 00 00 00 00 00 00 00 00 00 00 00 22 0a 00 00 00 52 6f 74 61 74 69 6f 6e 32 33 14 00 00 00 00 00 00 00 00 00 00 00 00 23 19 00 00 00 59 65 74 41 6e 6f 74 68 65 72 43 46 72 61 6d 65 41 74 74 72 69 62 75 74 65 14 00 00 80 3f 8a 88 48 40 17 d9 4e 3f 00 2b a6 77 be b2 8f 70 bf 28 a6 77 be f3 04 35 3f 63 c0 04 b3 f3 04 35 bf 3f 1a 2a 3f 45 1d af be 3f 1a 2a 3f
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Folder
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
  - End
